--- a/deploy/kubernetes/chart/templates/thredds/deployment.yaml
+++ b/deploy/kubernetes/chart/templates/thredds/deployment.yaml
@@ -20,8 +20,8 @@ spec:
       {{- with (default .Values.image.pullSecrets $thredds.image.pullSecrets) }}
       imagePullSecrets: {{ toYaml . | nindent 8 }}
       {{- end }}
-      {{- with $thredds.podSecurityContext }}
-      securityContext: {{ toYaml $thredds.podSecurityContext | nindent 8 }}
+      {{- with .Values.data.podSecurityContext }}
+      securityContext: {{ toYaml . | nindent 8 }}
       {{- end }}
       containers:
         - name: thredds
@@ -46,8 +46,8 @@ spec:
           livenessProbe:
             <<: *probe
             initialDelaySeconds: 300
-          {{- with $thredds.securityContext }}
-          securityContext: {{ toYaml $thredds.securityContext | nindent 12 }}
+          {{- with .Values.data.securityContext }}
+          securityContext: {{ toYaml . | nindent 12 }}
           {{- end }}
           volumeMounts:
             - name: catalog-esgcet
