Flatten the variable structure as required by Ansible

--- a/deploy/ansible/roles/data/tasks/main.yml
+++ b/deploy/ansible/roles/data/tasks/main.yml
@@ -14,15 +14,6 @@
   docker_network:
     name: esgf
 
-- name: Configure data volumes
-  set_fact:
-    data_docker_mounts: >-
-      [
-        {% for mount in data.mounts %}
-        "{{ mount.hostPath }}:{{ mount.mountPath }}:ro",
-        {% endfor %}
-      ]
-
 - name: Configure THREDDS
   block:
     - name: Write THREDDS configuration
@@ -30,15 +21,11 @@
         src: catalog.xml.j2
         dest: /esg/config/thredds/catalog.xml
 
-    - name: Set THREDDS image fact
-      set_fact:
-        thredds_image: "{{ image_defaults | combine(data.thredds.image) }}"
-
     - name: Start THREDDS container
       docker_container:
         name: thredds
-        image: "{{ thredds_image.prefix }}/{{ thredds_image.repository }}:{{ thredds_image.tag }}"
-        pull: "{{ thredds_image.pull }}"
+        image: "{{ thredds_image_prefix }}/{{ thredds_image_repository }}:{{ thredds_image_tag }}"
+        pull: "{{ thredds_image_pull }}"
         detach: yes
         restart_policy: on-failure
         exposed_ports:
@@ -46,13 +33,19 @@
         networks:
           - name: esgf
         networks_cli_compatible: yes
-        user: "{{ data.security_context.user }}"
-        groups: "{{ data.security_context.groups }}"
+        user: "{{ data_security_context_user }}"
+        groups: "{{ data_security_context_groups }}"
         # Append the catalog volume to the data mounts
-        volumes: "{{ ['/esg/config/thredds:/opt/tomcat/content/thredds/esgcet:ro'] + data_docker_mounts }}"
+        volumes: >-
+          [
+            "/esg/config/thredds:/opt/tomcat/content/thredds/esgcet:ro",
+            {% for mount in data_mounts %}
+            "{{ mount.host_path }}:{{ mount.mount_path }}:ro",
+            {% endfor %}
+          ]
         state: started
         restart: yes
-  when: "data.thredds.enabled | bool"
+  when: "thredds_enabled | bool"
 
 - name: Configure Nginx fileserver
   block:
@@ -61,15 +54,11 @@
         src: fileserver.conf.j2
         dest: /esg/config/fileserver/fileserver.conf
 
-    - name: Set fileserver image fact
-      set_fact:
-        fileserver_image: "{{ image_defaults | combine(data.fileserver.image) }}"
-
     - name: Start fileserver container
       docker_container:
         name: fileserver
-        image: "{{ fileserver_image.prefix }}/{{ fileserver_image.repository }}:{{ fileserver_image.tag }}"
-        pull: "{{ fileserver_image.pull }}"
+        image: "{{ fileserver_image_prefix }}/{{ fileserver_image_repository }}:{{ fileserver_image_tag }}"
+        pull: "{{ fileserver_image_pull }}"
         detach: yes
         restart_policy: on-failure
         exposed_ports:
@@ -77,10 +66,17 @@
         networks:
           - name: esgf
         networks_cli_compatible: yes
-        user: "{{ data.security_context.user }}"
-        groups: "{{ data.security_context.groups }}"
+        user: "{{ data_security_context_user }}"
+        groups: "{{ data_security_context_groups }}"
         # Append the Nginx config volume to the data mounts
-        volumes: "{{ ['/esg/config/fileserver:/etc/nginx/conf.d:ro'] + data_docker_mounts }}"
+        # Append the catalog volume to the data mounts
+        volumes: >-
+          [
+            "/esg/config/fileserver:/etc/nginx/conf.d:ro",
+            {% for mount in data_mounts %}
+            "{{ mount.host_path }}:{{ mount.mount_path }}:ro",
+            {% endfor %}
+          ]
         state: started
         restart: yes
-  when: "data.fileserver.enabled | bool"
+  when: "fileserver_enabled | bool"
