--- a/images/jre/Dockerfile
+++ b/images/jre/Dockerfile
@@ -4,14 +4,14 @@
 ## Intended for use as a base image for runtime Java images
 #####
 
-ARG ESGF_REPOSITORY_BASE=esgfhub
+ARG ESGF_REPOSITORY_BASE=esgfdeploy
 ARG ESGF_IMAGES_VERSION=latest
 FROM ${ESGF_REPOSITORY_BASE}/base:${ESGF_IMAGES_VERSION}
 
 USER root
 
 RUN yum makecache && \
-    yum install -y java-1.8.0-openjdk-1.8.0.242* && \
+    yum install -y java-1.8.0-openjdk-headless-1.8.0.252.b09 && \
     yum clean all
 
 USER $ESGF_UID
