--- a/deploy/ansible/roles/data/tasks/main.yml
+++ b/deploy/ansible/roles/data/tasks/main.yml
@@ -16,10 +16,21 @@
 
 - name: Configure THREDDS
   block:
-    - name: Write THREDDS configuration
-      template:
-        src: catalog.xml.j2
-        dest: /esg/config/thredds/catalog.xml
+    - name: Generate THREDDS catalogs
+      block:
+        - name: Write THREDDS catalog
+          template:
+            src: catalog.xml.j2
+            dest: /esg/config/thredds/catalog.xml
+
+        - name: Set thredds_catalog_host_path for generated catalogs
+          set_fact:
+            thredds_catalog_host_path: /esg/config/thredds
+      when: thredds_catalog_host_path is not defined
+
+    - name: Create THREDDS cache volume
+      docker_volume:
+        name: thredds-cache
 
     - name: Start THREDDS container
       docker_container:
@@ -35,10 +46,13 @@
         networks_cli_compatible: yes
         user: "{{ data_security_context_user }}"
         groups: "{{ data_security_context_groups }}"
-        # Append the catalog volume to the data mounts
         volumes: >-
           [
-            "/esg/config/thredds:/opt/tomcat/content/thredds/esgcet:ro",
+            # First the catalog volume
+            "{{ thredds_catalog_host_path }}:/opt/tomcat/content/thredds/esgcet:ro",
+            # Then the cache volume
+            "thredds-cache:/opt/tomcat/content/thredds/cache:rw",
+            # Then finally the data mounts
             {% for mount in data_mounts %}
             "{{ mount.host_path }}:{{ mount.mount_path }}:ro",
             {% endfor %}
