Support for large pre-existing catalogs

--- a/deploy/kubernetes/chart/templates/fileServer/deployment.yaml
+++ b/deploy/kubernetes/chart/templates/fileServer/deployment.yaml
@@ -25,11 +25,12 @@ spec:
       {{- end }}
       containers:
         - name: file-server
-          {{ include "esgf.deployment.image" (list . $fileServer) }}
+          {{ include "esgf.deployment.image" (list . $fileServer.image) }}
           resources: {{ toYaml $fileServer.resources | nindent 12 }}
           ports:
             - name: http
               containerPort: 8080
+          env: {{ toYaml $fileServer.extraEnv | nindent 12 }}
           readinessProbe: &probe
             httpGet:
               path: /
